# VectorTA

./: .git.bak  .gitattributes  .gitignore  .gitmodules  .rust-analyzer.toml  AGENTS.md  ALMA_API_CONSOLIDATION.md  BATCH_DEFAULTS_250_CHECKLIST.md  BATCH_FILE_TEMPLATE.bat  BUILD_FIXES.md  CCI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CUDA_OPTIMIZATION_TRACKER.md  CUDA_WSL2_TROUBLESHOOTING.md  Cargo.toml  INDICATOR_QUALITY_REPORT.md  INDICATOR_TEMPLATE.md  JSA_OPTIMIZATION_SUMMARY.md  JSA_WASM_FINAL_REVIEW.md  JSA_WASM_OPTIMIZATION_SUMMARY.md  JSA_WASM_PERFORMANCE_ANALYSIS.md  KAMA_BATCH_FIX_SUMMARY.md  KAMA_FINAL_REVIEW.md  KAMA_OPTIMIZATION_REPORT.md  LICENSE  MAAQ_WASM_OPTIMIZATION_SUMMARY.md  MAMA_QUALITY_AUDIT.md  POISON_TEST_GUIDE.md  PUBLISHING_CHECKLIST.md  PWMA_OPTIMIZATION_SUMMARY.md  PWMA_WASM_OPTIMIZATION_SUMMARY.md  PYTHON_BINDING_OPTIMIZATION_GUIDE.md  RAYON_WASM_ROLLBACK.md  README.md  SIMD_OPTIMIZATION_TRACKER.md  SIMD_SCALAR_SELECTION_TRACKER.md  SINWMA_WASM_OPTIMIZATION_FINAL_RESULTS.md  SINWMA_WASM_OPTIMIZATION_RESULTS.md  SMMA_OPTIMIZATION_SUMMARY.md  SMMA_WASM_COMPLETE_SUMMARY.md  (+369 more)
.cargo/: config.toml  rust-toolchain.toml
.claude/: settings.local.json
benches/: cuda_alma.rs  cuda_bench.rs  indicator_benchmark.rs  rsmk_mixed_bench.rs
benchmarks/: analyze_pyo3_overhead.py  batch_1m_list.txt  batch_1m_results.txt  bench_alma_cuda.py  bench_buff_averages_cuda.py  bench_ehlers_ecema_cuda.py  bench_epma_cuda.py  bench_highpass_cuda.py  bench_kama_cuda.py  bench_nama_cuda.py  bench_sinwma_cuda.py  bench_supersmoother_3_pole_cuda.py  bench_tradjema_cuda.py  bench_wma_cuda.py  bench_zscore_cuda.py  compare_binding_overhead.py  compare_methodologies.py  criterion_comparable_benchmark.py  criterion_comparable_results.json  debug_jsa_perf.js  direct_comparison.py  final_mystery_solver.js  indicator_batch_1m_x_250_results.txt  jsa_detailed_benchmark.py  jsa_final_comparison.py  minimal_alma_bench.py  profile_binding_overhead.py  profile_jsa_overhead.py  solve_timing_mystery.js  tema_benchmark.js  tema_benchmark_results.txt  test_import_overhead.py  test_tema_perf.js  test_worker.js  trace_wasm_benchmark.js  understand_benchmark_timing.js  verify_alma_computation.py  verify_jsa_computation.py  verify_jsa_wasm_perf.js  verify_rust_perf.bat  (+8 more)
benchmarks/cross_library/: COMMON_INDICATORS.md  Cargo.toml  PERFORMANCE_REPORT.md  README.md  TALIB_SETUP.md  UNDERPERFORMING_VS_TULIP.md  UNDERPERFORMING_VS_TULIP_100K.md  UNDERPERFORMING_VS_TULIP_10K.md  benchmark_results.json  benchmark_results.prev.json  benchmark_results_pretty.json  build.rs  measure_collect_generated.txt
benchmarks/cross_library/benches/: cross_library_comparison.rs
benchmarks/cross_library/examples/: check_tulip_adx.rs  generate_measure_collect.rs  quick_comparison.rs  test_talib.rs  test_tulip.rs  unified_benchmark_example.rs
benchmarks/cross_library/src/: benchmark_collector.rs  benchmark_methodology.rs  ffi_overhead.rs  json_export.rs  lib.rs  report.rs  rust_ffi.rs  talib_wrapper.rs  unified_benchmark.rs
docs/: WASM_MULTITHREAD_RESEARCH.md  batch_memory_efficiency_update.md
examples/: bench_alma.rs  bench_alma_comparison.rs  bench_jsa.rs  bench_jsa_comparison.rs  bench_jsa_direct_write.rs  bench_jsa_kernels.rs  bench_jsa_rust_baseline.rs  bench_jsa_unified.rs  bench_ma.rs  bench_ma_kernel.rs  check_jsa_kernel.rs
gpu_backtester_demo/: Cargo.toml  README.md  build.rs
gpu_backtester_demo/src/: main.rs
gpu_backtester_demo/src/kernels/: double_crossover.cu
legacy/: benchmark_alma_python.py  benchmark_alma_simple.py  compare_alma_performance.py  direct_alma_comparison.py  fix_all_wasm_issues.py  verify_test_simple.py
optimizer_demo/: Cargo.toml  build.rs
optimizer_demo/src/: main.rs
optimizer_demo/src/backends/: cpu.rs  gpu.rs  types.rs
optimizer_demo/src/kernels/: double_crossover.cu
optimizer_demo/static/: index.html
optimizer_demo/web/: index.html  package.json  tsconfig.json  vite.config.ts
optimizer_demo/web/src/: App.tsx  main.tsx
optimizer_demo/web/src/components/: ChartPanel.tsx  HeatmapChart.tsx
rmetaVkSwjt/: full.rmeta
rmetarxmwyC/: full.rmeta
scripts/: aggregate_cuda_bench_criterion.ps1  aggregate_cuda_bench_criterion.py  aggregate_indicator_bench_criterion.ps1  analyze_memory_efficiency.py  generate_1m_candles.ps1  generate_binding_tests.py  indicator_audit.py  run_cross_library_benchmark.ps1  run_cuda_bench_1m_x_250.ps1  run_cuda_bench_one_per_indicator.ps1  run_indicator_batch_bench_1m_x_250.py  run_indicator_benchmark.ps1  strip_all_comments.py  strip_double_slash_comments.py
src/: lib.rs  main.rs  python_module.rs  test_fwma_values.rs  test_supertrend.rs
ta_desktop_demo/: CPU_STRATEGY_ROADMAP.md  Cargo.toml  PROGRESS.md  README.md  RELEASE.md  VRAM_KERNEL_REFACTOR.md  tauri.conf.json
ta_desktop_demo/crates/app_core/: Cargo.toml  build.rs
ta_desktop_demo/crates/app_core/benches/: double_ma_metrics.rs  double_ma_opt.rs
ta_desktop_demo/crates/app_core/src/: double_ma.rs  gpu_backtest_kernel.rs  lib.rs  progress.rs  vram_ma.rs
ta_desktop_demo/crates/app_core/src/kernels/: double_crossover.cu  double_crossover.prebuilt.ptx
ta_desktop_demo/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ta_desktop_demo/src-tauri/src/: commands.rs  lib.rs  ma_registry.rs  main.rs  state.rs
target-cuda-tests/: .rustc_info.json
temp_check/: .rustc_info.json
tests/: acosc_cuda.rs  ad_cuda.rs  adosc_cuda.rs  adx_cuda.rs  adxr_cuda.rs  alligator_cuda.rs  alma_cuda.rs  alma_cuda_variants.rs  alphatrend_cuda.rs  ao_cuda.rs  apo_cuda.rs  aroon_cuda.rs  aroonosc_cuda.rs  aso_cuda.rs  atr_cpu_only.rs  atr_cuda.rs  avsl_cuda.rs  bandpass_cuda.rs  bollinger_bands_cuda.rs  bollinger_bands_width_cuda.rs  bop_cuda.rs  buff_averages_cuda.rs  buff_averages_cuda_variants.rs  cci_cuda.rs  cci_cycle_cuda.rs  cfo_cuda.rs  cg_cuda.rs  chande_cuda.rs  chandelier_exit_cuda.rs  chop_cuda.rs  cksp_cuda.rs  cmo_cuda.rs  coppock_cuda.rs  cora_wave_cuda.rs  correl_hl_cuda.rs  correlation_cycle_cuda.rs  cvi_cuda.rs  cwma_cuda.rs  damiani_volatmeter_cuda.rs  debug_adxr_rust.rs  (+163 more)
(+1772 files in other folders)
