[package]
name = "my_project"  
version = "0.1.0"
edition = "2021"
exclude = [".claude/"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "indicator_benchmark"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
ndarray = "0.16.1"
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
thiserror = "2.0.9"
lru = "0.14.0"
once_cell = "1.21.3"
paste = "1.0.15"
num-traits = "0.2.19"
anyhow = "1.0.98"
aligned-vec = "0.6.4"
libc = "0.2.172"
itertools = "0.14.0"
wasm-bindgen = { version = "0.2.95", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
pyo3 = { version = "0.25.0", optional = true, features = ["extension-module"] }
numpy = { version = "0.25.0", optional = true }
smallvec = "1.15.1"
float-cmp = "0.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = { version = "1.7.0", optional = true }
rayon = "1.10.0"
ctor = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.39", features = ["wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }


[build-dependencies]
cmake = "0.1.54"
bindgen = "0.71.1"
which = "7.0.3"
cc = { version = "1.0", optional = true }

[lib]
name = "my_project"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "my_project_cli"
path = "src/main.rs"

[[bin]]
name = "generate_references"
path = "src/bin/generate_references.rs"

[profile.release]
opt-level       = 3
codegen-units   = 16  # Reduced from 255 for faster compilation
incremental = false
# panic = "abort"  # Commented out to allow benchmarks to compile
overflow-checks = false
debug = true
strip = "none"
split-debuginfo = "unpacked"
# LTO is conditionally enabled based on target

# Additional WASM-specific optimizations
[profile.wasm]
inherits = "release"
opt-level = "z"  # Optimize for size which often improves performance in browsers
lto = false      # Disable LTO for WASM
strip = "symbols"

[profile.bench]
# Don't inherit from any profile to avoid panic strategy conflicts
opt-level = 3
lto = false  # Disabled for faster compilation
codegen-units = 4  # Increased for faster compilation
incremental = false
overflow-checks = false
debug = false  # Disabled for faster compilation
strip = "none"
split-debuginfo = "unpacked"

[profile.dev]
# Development profile settings

[profile.dev.build-override]
# Ensure proc-macros don't use LTO in dev builds
opt-level = 0
codegen-units = 16

[features]
default = ["proptest"]
nightly-avx = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]
python = ["pyo3", "numpy"]

[package.metadata.wasm-pack]
"wasm-opt" = ["-O4", "--enable-simd"]

[profile.release.build-override]
# Applies only to build-scripts & proc-macros, *not* to your library/bin code.
# Note: Cannot specify lto in build-override profiles (Cargo restriction)
codegen-units = 1      # optional tidy-up; keeps small helper crates optimised

[profile.bench.build-override]
# Note: Cannot specify lto in build-override profiles (Cargo restriction)
codegen-units = 1


# ────────────────────────────────────────────────────────────────
# 2.  Custom WASM profile used by wasm-pack  (inherits release)
# ────────────────────────────────────────────────────────────────
[profile.wasm.build-override]
# Note: Cannot specify lto in build-override profiles (Cargo restriction)
codegen-units = 1