[package]
name = "gpu_backtester_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.1"
cust = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.my_project]
package = "vector-ta"
path = ".."
features = ["cuda"]

[build-dependencies]
which = "7.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

