[package]
name = "optimizer_demo"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = ["my_project/cuda", "cust"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
thiserror = "2.0"
rayon = "1.10"
cust = { version = "0.3", optional = true }
tower-http = { version = "0.5", features = ["fs"] }

[dependencies.my_project]
path = ".."
features = ["python"]

[build-dependencies]
which = "7.0"
