[package]
name = "cross-library-benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = []
talib = []

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
plotters = "0.3"
tabled = "0.15"
my_project = { path = "../.." }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[[bench]]
name = "cross_library_comparison"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3