[package]
name = "cross-library-benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = []
talib = []
nightly-avx = ["my_project/nightly-avx"]
# Enable HTML reports on demand to avoid system fontconfig dependency by default
html-reports = ["criterion/html_reports", "dep:plotters"]

[dependencies]
criterion = { version = "0.5" }
anyhow = "1.0"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
tabled = "0.15"
chrono = "0.4"
lazy_static = "1.4"
my_project = { path = "../.." }
plotters = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[[bench]]
name = "cross_library_comparison"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
