[package]
name = "ta_desktop_demo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
my_project = { path = "../.." }
ta_strategies = { path = "../crates/strategies" }
ta_optimizer = { path = "../crates/optimizer" }

[build-dependencies]
tauri-build = "2"
