[package]
name = "ta_desktop_demo_app"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[features]
default = []
cuda = ["ta_app_core/cuda"]
cuda-backtest-kernel = ["cuda", "ta_app_core/cuda-backtest-kernel"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
my_project = { path = "../..", package = "vector-ta" }
ta_app_core = { path = "../crates/app_core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Controls_Dialogs"] }

[build-dependencies]
tauri-build = "2"
