[package]
name = "ta_app_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["my_project/cuda"]
cuda-backtest-kernel = ["cuda", "cust"]
cli = ["dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10.0"
ta_strategies = { path = "../strategies" }
ta_optimizer = { path = "../optimizer" }
my_project = { path = "../../..", package = "vector-ta" }
cust = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
which = "7.0"

[[bench]]
name = "double_ma_opt"
harness = false

[[bench]]
name = "double_ma_metrics"
harness = false

[[bin]]
name = "ta_cli"
path = "src/bin/ta_cli.rs"
required-features = ["cli"]
